chore: fix vertical alignment of dividers

--- a/src/views/search/components/filter-section.module.scss
+++ b/src/views/search/components/filter-section.module.scss
@@ -42,6 +42,7 @@
 	grid-row: 1;
 
 	display: flex;
+	align-items: center;
 	gap: var(--search-page_filter_list_header_gap);
 	width: 100%;
 	// Replace with tokens
